--- a/style.css
+++ b/style.css
@@ -63,7 +63,6 @@ justify-content: center;
 .box{
     width: 200px;
     height: 200px;
-    background-color: aquamarine;
     border: 8px solid blue;
     border-radius: 5px;
     background: transparent;
@@ -108,6 +107,18 @@ justify-content: center;
     margin-top: 100px;
 }
 
+.call-to-action{
+display: flex;
+flex-direction: column;
+}
+
+.call-holder{
+height: 200px;
+width: 80%;
+background-color: lightseagreen;
+
+}
+
 .footer{
-    
+
 }
