--- a/style.css
+++ b/style.css
@@ -110,15 +110,42 @@ justify-content: center;
 .call-to-action{
 display: flex;
 flex-direction: column;
+align-items: center;
 }
 
 .call-holder{
-height: 200px;
-width: 80%;
-background-color: lightseagreen;
+display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+height: 150px;
+width: 70%;
+background-color: orange;
+margin: 10px;
 
 }
 
-.footer{
+#fox1{
+    font-size: 25px;
+}
 
+#here{
+    font-size: 18px;
+    color: rgba(255, 255, 255, 0.8);
+}
+
+.sign-up{
+    margin: 40px;
+    height: 20px;
+    width: 50;
+    background-color: transparent;
+    border: solid black;
+    border-radius: 10px;
+    padding-bottom: 20px;
+}
+
+
+.foot{
+background-color: #1F2937;
+height: 100px;
 }
