--- a/style.css
+++ b/style.css
@@ -10,11 +10,22 @@ flex-direction: column;
 }
 
 .header{
+    /*
     background-color: #1F2937;
+    */
+    background-color: rgb(17, 56, 37);
     display: flex;
     justify-content: space-around;
     padding: 10px;
 }
+/*
+.fa-regular {
+color: orange;
+background-color: orange;
+width: 40px;
+height: 40px;
+}
+*/
 
 .top-links{
     display: flex;
@@ -28,12 +39,20 @@ ul{
 }
 
 
-.sign-up{
-width: 100px;
-}
-
 .header-photo{
     width: 250px;
+    border-radius: 20px;
+}
+
+
+.sign-up2{
+    margin: 40px;
+    height: 30px;
+    width: 110;
+    background-color: transparent;
+    border: solid black;
+    border-radius: 10px;
+    padding-bottom: 20px;
 }
 
 .top-fox-photo{
@@ -41,7 +60,10 @@ width: 100px;
     justify-content: end;
 }
 .container{
+    /*
     background-color: #1F2937;
+    */
+    background-color: rgb(255, 165, 0);
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -63,7 +85,7 @@ justify-content: center;
 .box{
     width: 200px;
     height: 200px;
-    border: 8px solid blue;
+    border: 8px solid  rgb(255, 165, 0);
     border-radius: 5px;
     background: transparent;
 }
@@ -144,8 +166,34 @@ margin: 10px;
     padding-bottom: 20px;
 }
 
+.sign-up:hover{
+    background-color: rgb(255, 140, 0);
+}
+
+.sign-up:active{
+    background-color: rgb(255, 110, 0);
+}
+
 
 .foot{
-background-color: #1F2937;
+background-color: rgb(17, 56, 37);
 height: 100px;
+}
+
+@media only screen and (max-width: 800px){
+.boxes{
+    display: flex;
+    flex-direction: column;
+}
+
+.text{
+display: flex;
+flex-direction: column;
+}
+
+.box-section{
+    display: flex;
+    flex-direction: row;
+}
+
 }
